--- a/app/src/main/res/layout/fragment_payment_success.xml
+++ b/app/src/main/res/layout/fragment_payment_success.xml
@@ -39,7 +39,7 @@
                     <cenergy.central.com.pwb_store.view.PowerBuyTextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/success"
+                        android:text="@string/title_order_success"
                         android:textSize="32sp" />
 
                     <cenergy.central.com.pwb_store.view.PowerBuyTextView
