Fixed focusable false in HomeDeliverFragment

--- a/app/src/main/res/layout/fragment_home_delivery.xml
+++ b/app/src/main/res/layout/fragment_home_delivery.xml
@@ -71,7 +71,8 @@
         android:layout_marginTop="16dp"
         android:background="@drawable/border_grey"
         android:drawableEnd="@drawable/ic_keyboard_arrow_down"
-        android:inputType="text"
+        android:focusable="false"
+        android:inputType="none"
         android:maxLines="1"
         android:paddingBottom="8dp"
         android:paddingEnd="8dp"
@@ -92,7 +93,8 @@
         android:layout_marginTop="16dp"
         android:background="@drawable/border_grey"
         android:drawableEnd="@drawable/ic_keyboard_arrow_down"
-        android:inputType="text"
+        android:focusable="false"
+        android:inputType="none"
         android:maxLines="1"
         android:paddingBottom="8dp"
         android:paddingEnd="8dp"
