--- a/app/src/main/res/layout/list_item_shopping_cart.xml
+++ b/app/src/main/res/layout/list_item_shopping_cart.xml
@@ -108,14 +108,30 @@
         tools:text="6" />
 
     <cenergy.central.com.pwb_store.view.PowerBuyTextView
-        android:id="@+id/total_price_list_shopping_cart"
-        style="@style/textNameProduct"
+        android:id="@+id/tvOverQty"
+        style="@style/descriptionProduct"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="invisible"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="14dp"
+        android:textColor="@color/dangerColor"
+        android:text="@string/add_over_qty"
+        app:layout_constraintStart_toEndOf="@id/qty_list_shopping_cart"
+        app:layout_constraintTop_toBottomOf="@id/price_list_shopping_cart" />
+
+    <cenergy.central.com.pwb_store.view.PowerBuyTextView
+        android:id="@+id/total_price_list_shopping_cart"
+        style="@style/textNameProduct"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="14dp"
         android:gravity="end"
+        android:maxLines="1"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/tvOverQty"
         app:layout_constraintTop_toBottomOf="@+id/price_list_shopping_cart"
         tools:ignore="RelativeOverlap"
         tools:text="฿204" />
