--- a/app/src/main/res/layout/list_item_delivery_options.xml
+++ b/app/src/main/res/layout/list_item_delivery_options.xml
@@ -4,10 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="8dp"
     android:paddingEnd="16dp"
     android:paddingStart="16dp"
-    android:paddingTop="8dp">
+    android:paddingTop="16dp">
 
     <android.support.constraint.Guideline
         android:id="@+id/guild_line_50"
@@ -18,31 +17,45 @@
 
     <cenergy.central.com.pwb_store.view.PowerBuyTextView
         android:id="@+id/tv_carrier_title"
-        style="@style/Base.TextAppearance.AppCompat.Subhead"
+        style="@style/textSize22Sp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toStartOf="@+id/iv_arrow_next"
+        app:layout_constraintEnd_toStartOf="@+id/choose_delivery_option"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="carrier_title" />
 
-    <ImageView
-        android:id="@+id/iv_arrow_next"
+    <cenergy.central.com.pwb_store.view.PowerBuyTextView
+        android:id="@+id/choose_delivery_option"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/choose_delivery_option"
-        android:src="@drawable/ic_arrow_next"
-        android:tint="@color/blackText"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_carrier_title"
+        android:layout_marginEnd="8dp"
+        android:textSize="18sp"
+        android:text="@string/choose"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/tv_carrier_title"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <cenergy.central.com.pwb_store.view.PowerBuyTextView
+        android:id="@+id/tv_amount"
+        style="@style/textSize22Sp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:gravity="end"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/guild_line_50"
+        app:layout_constraintTop_toBottomOf="@+id/choose_delivery_option"
+        tools:text="carrier_title" />
 
     <TextView
         android:id="@+id/tv_method_title"
-        style="@style/TextAppearance.AppCompat.Small"
+        android:textSize="18sp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toStartOf="@id/guild_line_50"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_carrier_title"
@@ -54,5 +67,6 @@
         android:layout_height="1dp"
         android:layout_marginTop="16dp"
         android:background="@color/graySelect"
-        app:layout_constraintTop_toBottomOf="@+id/tv_method_title" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_method_title"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 </android.support.constraint.ConstraintLayout>
