--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -14,7 +14,7 @@
         android:background="?attr/selectableItemBackground"
         android:clickable="true"
         android:focusable="true"
-0        android:gravity="center_vertical"
+        android:gravity="center_vertical"
         android:orientation="horizontal"
         android:padding="8dp">
 
