--- a/app/src/main/res/layout/list_item_delivery_options.xml
+++ b/app/src/main/res/layout/list_item_delivery_options.xml
@@ -31,8 +31,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:textSize="18sp"
         android:text="@string/choose"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/tv_carrier_title"
         app:layout_constraintTop_toTopOf="parent" />
@@ -52,10 +52,10 @@
 
     <TextView
         android:id="@+id/tv_method_title"
-        android:textSize="18sp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@id/guild_line_50"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_carrier_title"
@@ -67,6 +67,6 @@
         android:layout_height="1dp"
         android:layout_marginTop="16dp"
         android:background="@color/graySelect"
-        app:layout_constraintTop_toBottomOf="@+id/tv_method_title"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_method_title" />
 </android.support.constraint.ConstraintLayout>
