--- a/app/src/main/res/layout/activity_product_detail2.xml
+++ b/app/src/main/res/layout/activity_product_detail2.xml
@@ -19,8 +19,10 @@
     <!-- region content-->
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:fillViewport="true"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/actionbar">
 
         <LinearLayout
