--- a/app/src/main/res/layout/fragment_product_extension.xml
+++ b/app/src/main/res/layout/fragment_product_extension.xml
@@ -2,8 +2,9 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/powerBuyWhite"
+    android:paddingBottom="16dp"
     android:paddingEnd="16dp"
     android:paddingStart="16dp">
 
@@ -25,12 +26,12 @@
     <FrameLayout
         android:id="@+id/extensionContainer"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:background="@drawable/bg_extension_box"
         android:minHeight="200dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/extensionTabLayout" />
-
 
 </android.support.constraint.ConstraintLayout>
