--- a/app/src/main/res/layout/activity_shopping_cart.xml
+++ b/app/src/main/res/layout/activity_shopping_cart.xml
@@ -6,7 +6,7 @@
     android:id="@+id/activity_cart"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.ProductDetailActivity">
+    tools:context=".activity.ShoppingCartActivity">
 
     <include
         layout="@layout/app_bar_shopping_cart"/>
