--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/powerBuyWhite"
+    android:elevation="4dp"
     android:paddingTop="16dp">
 
     <android.support.constraint.Guideline
@@ -255,14 +256,13 @@
                     android:contentDescription="@string/add_to_cart"
                     android:src="@drawable/ic_shopping_cart" />
 
-                <cenergy.central.com.pwb_store.view.PowerBuyTextView
-                    style="@style/RaisedButton"
+                <TextView
+                    style="@style/TextAppearance.AppCompat.Medium"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:padding="8dp"
                     android:text="@string/add_to_cart"
-                    android:textColor="@android:color/white"
-                    android:textSize="14sp"
-                    app:typeFaceAsset="RobotoLight.ttf" />
+                    android:textColor="@android:color/white"/>
 
             </LinearLayout>
 
@@ -301,14 +301,13 @@
                         android:contentDescription="@string/store_avaliable"
                         android:src="@drawable/ic_store_white" />
 
-                    <cenergy.central.com.pwb_store.view.PowerBuyTextView
-                        style="@style/RaisedButton"
+                    <TextView
+                        style="@style/TextAppearance.AppCompat.Medium"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:padding="8dp"
                         android:text="@string/product_available"
-                        android:textColor="@android:color/white"
-                        android:textSize="14sp"
-                        app:typeFaceAsset="RobotoLight.ttf" />
+                        android:textColor="@android:color/white" />
 
                 </LinearLayout>
 
@@ -340,14 +339,13 @@
                         android:contentDescription="@string/product_compare"
                         android:src="@drawable/ic_compare_bar" />
 
-                    <cenergy.central.com.pwb_store.view.PowerBuyTextView
-                        style="@style/RaisedButton"
+                    <TextView
+                        style="@style/TextAppearance.AppCompat.Medium"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/product_compare"
-                        android:textColor="@android:color/white"
-                        android:textSize="14sp"
-                        app:typeFaceAsset="RobotoLight.ttf" />
+                        android:padding="8dp"
+                        android:textColor="@android:color/white" />
 
                 </LinearLayout>
 
@@ -358,12 +356,10 @@
 
     <View
         android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_height="2dp"
         android:background="@color/lightgray"
         app:layout_constraintTop_toBottomOf="@+id/pagerProductImage"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
