--- a/app/src/main/res/layout/fragment_product_extension.xml
+++ b/app/src/main/res/layout/fragment_product_extension.xml
@@ -4,13 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/powerBuyWhite"
-    android:paddingBottom="16dp"
+    android:paddingStart="16dp"
     android:paddingEnd="16dp"
-    android:paddingStart="16dp">
+    android:paddingBottom="16dp">
 
     <android.support.design.widget.TabLayout
         android:id="@+id/extensionTabLayout"
         android:layout_width="0dp"
+        app:tabTextAppearance="@style/Base.TextAppearance.AppCompat.Medium"
         android:layout_height="?android:attr/actionBarSize"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
