--- a/app/src/main/res/layout/list_item_shopping_cart.xml
+++ b/app/src/main/res/layout/list_item_shopping_cart.xml
@@ -56,13 +56,15 @@
         app:layout_constraintTop_toTopOf="@+id/product_image_list_shopping_cart"
         android:text="@string/title_free_item" />
 
-    <ImageView
+    <TextView
         android:id="@+id/deleteItemImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:gravity="center"
         android:contentDescription="@string/product_detail"
-        android:src="@drawable/ic_cancel"
+        android:drawableStart="@drawable/ic_delete"
+        android:text="@string/shopping_delete"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/product_name_list_shopping_cart"
         app:layout_constraintTop_toTopOf="parent" />
