--- a/app/src/main/res/layout/fragment_payment_success.xml
+++ b/app/src/main/res/layout/fragment_payment_success.xml
@@ -438,7 +438,9 @@
                 android:background="@color/lightgray"
                 android:gravity="end"
                 android:orientation="horizontal"
-                android:paddingEnd="16dp"
+                android:paddingTop="8dp"
+                android:paddingEnd="24dp"
+                android:paddingBottom="8dp"
                 tools:ignore="RtlSymmetry">
 
                 <cenergy.central.com.pwb_store.view.PowerBuyTextView
@@ -457,12 +459,6 @@
                     android:textSize="22sp"
                     tools:text="4,404" />
             </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginBottom="16dp"
-                android:background="@color/graySelect" />
 
             <android.support.v7.widget.CardView
                 android:id="@+id/finish_btn_order_success"
